update hero bg path

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -25,7 +25,7 @@
 
   @include laptop {
     padding: 152px 0 232px;
-    background-image: url("../../../src/images/bg/bg.webp");
+    background-image: url("../src/images/bg/bg.webp");
     background-size: 60%;
     background-repeat: no-repeat;
     background-position: bottom right;
